@@ -2,25 +2,40 @@ package ru.redsoft.ora2rdb;
 
 import org.junit.jupiter.api.Test;
 
-import java.io.*;
-import java.nio.charset.*;
-import java.nio.file.*;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.List;
 
+import com.github.difflib.DiffUtils;
+import com.github.difflib.UnifiedDiffUtils;
+import com.github.difflib.patch.Patch;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class ParserTest {
-    private String readFile(String path, Charset encoding) throws IOException {
-        return Files.readString(Paths.get("src/test/resources/"+path), encoding);
+    private List<String> readFile(String path) throws IOException {
+        return Files.readAllLines(Path.of("src/test/resources/" + path), StandardCharsets.UTF_8);
     }
 
     void test(String file) throws IOException {
-        String expected = readFile("output/" + file, StandardCharsets.UTF_8);
+        List<String> expected = readFile("output/" + file);
 
-        RewritingListener rewritingListener =
-                Ora2rdb.convert(new FileInputStream("src/test/resources/input/" + file));
-        String actual = rewritingListener.rewriter.getText().replace("\r", "");
-        assertEquals(expected, actual);
+        try (FileInputStream fs = new FileInputStream("src/test/resources/input/" + file)) {
+            RewritingListener rewritingListener =
+                    Ora2rdb.convert(fs);
+            List<String> actual = Arrays.asList(rewritingListener.rewriter.getText()
+                    .replace("\r", "").split("\n"));
+
+            Patch<String> diff = DiffUtils.diff(expected, actual);
+            List<String> unifiedDiff = UnifiedDiffUtils.generateUnifiedDiff("expected",
+                    "actual", expected, diff, 0);
+            String result = String.join("\n", unifiedDiff);
+            assertEquals("", result);
+        }
     }
 
     @Test
